--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@headlessui/vue": "^1.7.23",
         "@heroicons/vue": "^2.1.5",
         "@vitejs/plugin-vue": "^5.1.4",
+        "moment": "^2.30.1",
         "pinia": "^2.2.4",
         "vue": "^3.5.11",
         "vue-loader": "^17.3.1",
